Fixed issue white space

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,7 +16,7 @@
 
 @media (max-width: 768px) {
     .text_image_banner-container_outer {
-        margin-top: 130px !important;
+        margin-top: 120px !important;
     }
 }
 
